--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-clean-css": "^3.7.0",
     "gulp-imageoptim": "^1.0.8",
     "gulp-include": "^2.3.1",
     "gulp-sass": "^3.1.0",
